argorollouts/blue-green/service-active.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-service-active
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: email-service
