argorollouts/blue-green/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: email-service-active
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: email-service-active
            port: 
              number: 80
            

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: email-service-preview 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /preview(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: email-service-preview
            port: 
              number: 80
